# td-md-core

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: config_auto.yaml  config_m0.yaml  config_ring.yaml
docs/: TD_MD_Core_BRIEF_M0_v1_0.md  TD_MD_Core_Bench_v1_0.md  TD_MD_Core_ConfigSchema_v1_0.md  TD_MD_Core_Glossary_v1_0.md  TD_MD_Core_Rationale_v1_1.md  TD_MD_Core_Roadmap_v1_0.md  TD_MD_Core_Skeleton_Interfaces_v1_0.md  TD_MD_Core_TDfull_v1_1.md  TD_MD_Core_TZ_v1_1.md  TD_MD_Core_Units_v1_0.md  TD_MD_Core_ZoneFSM_v1_0.md
docs/_meta/: ARCHITECTURE_ASSESSMENT_v1_0.md  ARCH_AUDIT_GPU_2026-06-11.md  ARCH_ROADMAP_REVIEW_2026-06-11.md  FORMULA_VERIFICATION_2026-06-11.md  MIXED_PRECISION_BESTPRACTICES_2026-06-11.md  PERF_LANDSCAPE_2026-06-13.md  REVIEW_Neighbors_ManyBody_2026-06-13.md  REVIEW_TD_MD_Core_v1_1.md  TD_MD_Design_Neighbors_ManyBody_GPU.md  VALIDATION_EXPERIMENT_2026-06-12.md  VERLET_SKIN_DESIGN_2026-06-13.md  gpu_baseline_2026-06-11.md  ncu_occupancy_2026-06-12.md  occupancy_probe_2026-06-06.md  occupancy_probe_2026-06-11.md
docs/_meta/verlet_skin/: DRIFT_CORRECTION_PROOF_2026-06-13.md  K_FALLBACK_INTEGRATION_2026-06-13.md  ROADMAP_verlet_skin_2026-06-13.md  SKIN_CRITERION_SYNTHESIS_2026-06-13.md  SPEC_verlet_skin_criterion.md
include/tdmd/: units.hpp
include/tdmd/core/: buffer.hpp  cluster.hpp  conveyor.hpp  fixed_accum.hpp  fsm.hpp  integrator.hpp  simulation.hpp  soa.hpp  thermal.hpp  transport.hpp  zone.hpp  zones.hpp
include/tdmd/cuda/: conveyor_gpu.cuh  zone_cells.cuh  zone_force.cuh  zone_integrate.cuh  zone_verlet.cuh
include/tdmd/hal/: hal.hpp
include/tdmd/io/: config.hpp  reader_lammps.hpp  rescue.hpp  writer.hpp
include/tdmd/mpi/: mpi_ring_edge.hpp
include/tdmd/potentials/: clustered_morse.hpp  cutoff.hpp  lj.hpp  morse.hpp  pair_driver.hpp  pair_lj.hpp  pair_morse.hpp
include/tdmd/probe/: occupancy.hpp
reference_data/: README.md  al_fcc_144.data  al_fcc_72.data  al_fcc_72.xyz  generate_reference.py  in.al_morse  reference_forces.csv  reference_summary.json
reference_data/nist_lj/: README.md
scripts/: gpu_gate.sh
source/: README.md  time_decomposition.md  time_decomposition.txt
src/: main.cpp
src/io/: config.cpp  reader_lammps.cpp  rescue.cpp  writer.cpp
src/probe/: occupancy_probe.cpp
tests/: test_0_step.cpp  test_buffer.cpp  test_cluster.cpp  test_config.cpp  test_conveyor.cpp  test_cuda_cluster.cu  test_cuda_conveyor.cu  test_cuda_smoke.cu  test_cuda_zones.cu  test_determinism.cpp  test_fsm.cpp  test_lj_nist.cpp  test_mpi_conveyor.cu  test_nve_drift.cpp  test_nve_invariant.cpp  test_occupancy.cpp  test_reader.cpp  test_thermal.cpp  test_zones.cpp
tools/: bench_conveyor.cu  bench_pair.cpp  devprobe.cu  gen_fcc.py
